<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.feedFragment.FeedProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/arrow_back_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:contentDescription="@string/arrowBack"
            android:src="@drawable/icon_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/outfit_regular"
            android:gravity="start"
            android:text="@string/Alishia_Marsi"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/feed_iv_detail_profile"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginStart="125dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/animal_yek"
            android:contentDescription="@string/feedDetailImgProfile"
            android:scaleType="centerCrop"
            app:shapeAppearance="@style/ShapeAppearanceOverlay." />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="124dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="124dp"
            android:fontFamily="@font/outfit_regular"
            android:gravity="center"
            android:text="@string/Alishia_Marsi"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/outfit_light"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@color/Dark_Dark_500"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>