<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.profilefragment.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_iv"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_below="@+id/appBarLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="44dp"
        android:background="@color/Dark_Dark_100"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay." />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/add_profile_photo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignTop="@+id/profile_iv"
        android:layout_alignParentEnd="true"
        android:background="@drawable/edit_shape"
        app:layout_constraintBottom_toBottomOf="@+id/profile_iv"
        app:layout_constraintEnd_toEndOf="@+id/profile_iv"
        android:src="@drawable/icon_edit"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay."/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_iv">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="352dp"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/ll_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/icon_user"
                    android:contentDescription="@string/user_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:paddingStart="14dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:id="@+id/profile_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:fontFamily="@font/outfit_regular"
                        android:gravity="top"
                        android:text="@string/firstname"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:fontFamily="@font/outfit_light"
                        android:text="@string/first_name"
                        android:textColor="@color/Dark_Dark_200"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/icon_chevronright"
                    android:contentDescription="@string/arrow_icon" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/Dark_Dark_100"
                android:paddingHorizontal="16dp" />

            <LinearLayout
                android:id="@+id/ll_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/icon_user"
                    android:contentDescription="@string/user_icon" />

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:paddingStart="14dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:id="@+id/profile_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:fontFamily="@font/outfit_regular"
                        android:gravity="top"
                        android:text="@string/lastname"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:fontFamily="@font/outfit_light"
                        android:text="@string/lastname"
                        android:textColor="@color/Dark_Dark_200"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/icon_chevronright"
                    android:contentDescription="@string/arrow_icon" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/Dark_Dark_100"
                android:paddingHorizontal="16dp" />

            <LinearLayout
                android:id="@+id/ll_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/icon_mail"
                    android:contentDescription="@string/email_icon" />

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:paddingStart="14dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:fontFamily="@font/outfit_regular"
                        android:gravity="top"
                        android:text="@string/test_gmail_com"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:fontFamily="@font/outfit_light"
                        android:text="@string/email"
                        android:textColor="@color/Dark_Dark_200"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/icon_chevronright"
                    android:contentDescription="@string/arrow_icon" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/Dark_Dark_100"
                android:paddingHorizontal="16dp" />

            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/icon_password"
                    android:contentDescription="@string/password_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:paddingStart="14dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:id="@+id/profile_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:fontFamily="@font/outfit_regular"
                        android:gravity="top"
                        android:text="@string/star_for_password"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:fontFamily="@font/outfit_light"
                        android:text="@string/password"
                        android:textColor="@color/Dark_Dark_200"
                        android:textSize="12sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/icon_chevronright"
                    android:contentDescription="@string/arrow_icon" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/Dark_Dark_100"
                android:paddingHorizontal="16dp" />
        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>